--- a/index.html
+++ b/index.html
@@ -8,76 +8,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;700&display=swap" rel="stylesheet">
-
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
-    .center-screen {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 100vh;
-      flex-direction: column;
-    }
-
-    .container {
-      margin: 0 auto;
-      width: 80%;
-      max-width: 600px;
-      text-align: center;
-      background-color: hsl(0, 0%, 100%);
-      padding: 1.1em;
-      border-radius: 20px;
-    }
-
-    body {
-      font-family: 'Outfit', sans-serif;
-      background-color: hsl(212, 45%, 89%);
-      font-size: 15px;
-    }
-
-    .margin-bottom-3em {
-      margin-bottom: 1em;
-    }
-
-    .heading {
-      font-size: 1.5em;
-      font-weight: 700;
-    }
-
-    .text {
-      font-size: 1.1em;
-      font-weight: 400;
-      color: hsl(200, 3%, 47%);
-    }
-
-    @media screen and (min-width: 500px) {
-      .heading {
-        font-size: 2.5em;        
-      }
-
-      .text {
-        font-size: 2.1em;        
-      }
-
-    }
-
-    .qrCode {
-      border-radius: 20px;
-      width: 100%;
-    }
-  </style>
 </head>
 
 <body class="center-screen">
